Clean up social styles and fix display on mobile

--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -1,28 +1,27 @@
 .social {
-  display: block;
   margin-left: 0;
   padding-left: 0;
-}
 
-.social ul {
-  list-style: none;
-}
+  a:hover {
+    text-decoration: none;
+  }
 
-.social li {
-  font-size: 1.6em;
-  display: inline-block;
-  margin-left: 0.2em;
-  margin-right: 0.2em;
-}
+  ul {
+    list-style: none;
+  }
 
-.social li:first-child {
-  margin-left: 0;
-}
+  li {
+    font-size: 1.6em;
+    display: inline-block;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
 
-.social li:last-child {
-  margin-right: 0;
-}
+    &:first-child {
+      margin-left: 0;
+    }
 
-.social a:hover {
-  text-decoration: none;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
